Added Elis Dlls

--- a/FFF_Elis/FFF_Elis/FFF_Elis.csproj
+++ b/FFF_Elis/FFF_Elis/FFF_Elis.csproj
@@ -11,4 +11,14 @@
         <PackageReference Include="MudBlazor" Version="6.*"/>
     </ItemGroup>
 
+
+    <ItemGroup>
+      <Reference Include="ELISConfigBase">
+        <HintPath>..\libs\ELISConfigBase.dll</HintPath>
+      </Reference>
+      <Reference Include="ELISWCFClient">
+        <HintPath>..\libs\ELISWCFClient.dll</HintPath>
+      </Reference>
+    </ItemGroup>
+
 </Project>
