--- a/FFF_Elis/elis_client/ELISWCFClient/ELISWCFClient.csproj
+++ b/FFF_Elis/elis_client/ELISWCFClient/ELISWCFClient.csproj
@@ -11,6 +11,7 @@
     <AssemblyVersion>3.3.7468.42015</AssemblyVersion>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="CrystalDecisions.CrystalReports.Engine" Version="1.0.0" />
     <PackageReference Include="System.ServiceModel.Primitives" Version="8.0.0" />
     <PackageReference Include="System.ServiceModel.Http" Version="8.0.0" />
     <PackageReference Include="System.ServiceModel.Duplex" Version="6.0.0" />
