--- a/FFF_Elis/FFF_Elis/FFF_Elis.csproj
+++ b/FFF_Elis/FFF_Elis/FFF_Elis.csproj
@@ -9,7 +9,12 @@
 
     <ItemGroup>
         <PackageReference Include="CrystalDecisions.CrystalReports.Engine" Version="1.0.0" />
-        <PackageReference Include="MudBlazor" Version="6.*"/>
+        <PackageReference Include="MudBlazor" Version="6.*" />
+        <PackageReference Include="System.ServiceModel.Duplex" Version="6.0.*" />
+        <PackageReference Include="System.ServiceModel.Federation" Version="6.0.*" />
+        <PackageReference Include="System.ServiceModel.Http" Version="6.0.*" />
+        <PackageReference Include="System.ServiceModel.NetTcp" Version="6.0.*" />
+        <PackageReference Include="System.ServiceModel.Security" Version="6.0.*" />
     </ItemGroup>
     
 </Project>
