--- a/FFF_Elis/FFF_Elis/FFF_Elis.csproj
+++ b/FFF_Elis/FFF_Elis/FFF_Elis.csproj
@@ -9,12 +9,19 @@
 
     <ItemGroup>
         <PackageReference Include="CrystalDecisions.CrystalReports.Engine" Version="1.0.0" />
+        <PackageReference Include="Google.Apis.Calendar.v3" Version="1.68.0.3473" />
         <PackageReference Include="MudBlazor" Version="6.*" />
         <PackageReference Include="System.ServiceModel.Duplex" Version="6.0.*" />
         <PackageReference Include="System.ServiceModel.Federation" Version="6.0.*" />
         <PackageReference Include="System.ServiceModel.Http" Version="6.0.*" />
         <PackageReference Include="System.ServiceModel.NetTcp" Version="6.0.*" />
         <PackageReference Include="System.ServiceModel.Security" Version="6.0.*" />
+    </ItemGroup>
+
+
+    <ItemGroup>
+      <Folder Include="wwwroot\leaflet\" />
+      <Folder Include="wwwroot\visualizationFiles\" />
     </ItemGroup>
     
 </Project>
