--- a/FFF_Elis/FFF_Elis/FFF_Elis.csproj
+++ b/FFF_Elis/FFF_Elis/FFF_Elis.csproj
@@ -12,6 +12,7 @@
         <PackageReference Include="CrystalDecisions.CrystalReports.Engine" Version="1.0.0" />
         <PackageReference Include="Google.Apis.Calendar.v3" Version="1.68.0.3473" />
         <PackageReference Include="MudBlazor" Version="7.6.0" />
+        <PackageReference Include="Nominatim.API" Version="2.0.0" />
         <PackageReference Include="SYE.WebLibrary" Version="1.0.0" />
         <PackageReference Include="System.ServiceModel.Duplex" Version="6.0.*" />
         <PackageReference Include="System.ServiceModel.Federation" Version="6.0.*" />
