--- a/FFF_Elis/EPAS.BusinessLogic/EPAS.BusinessLogic.csproj
+++ b/FFF_Elis/EPAS.BusinessLogic/EPAS.BusinessLogic.csproj
@@ -6,4 +6,13 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <Folder Include="Helper\" />
+      <Folder Include="Migrations\" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\EPAS.Core\EPAS.Core.csproj" />
+    </ItemGroup>
+
 </Project>
