--- a/FFF_Elis/EPAS.Core/EPAS.Core.csproj
+++ b/FFF_Elis/EPAS.Core/EPAS.Core.csproj
@@ -9,6 +9,18 @@
     <ItemGroup>
       <Folder Include="ApplicationConstants\" />
       <Folder Include="BusinessObjects\" />
+      <Folder Include="Enums\" />
+      <Folder Include="Extensions\" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Reference Include="Microsoft.Extensions.Identity.Stores">
+        <HintPath>..\..\..\..\..\..\..\..\Program Files\dotnet\shared\Microsoft.AspNetCore.App\8.0.8\Microsoft.Extensions.Identity.Stores.dll</HintPath>
+      </Reference>
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.8" />
     </ItemGroup>
 
 </Project>
