--- a/FFF_Elis/TestWASConnection/TestWASConnection.csproj
+++ b/FFF_Elis/TestWASConnection/TestWASConnection.csproj
@@ -19,4 +19,8 @@
       <PackageReference Include="Serilog.Sinks.Seq" Version="8.0.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\EPAS.Core\EPAS.Core.csproj" />
+    </ItemGroup>
+
 </Project>
