--- a/FFF_Elis/TestWASConnection/TestWASConnection.csproj
+++ b/FFF_Elis/TestWASConnection/TestWASConnection.csproj
@@ -14,6 +14,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.0" />
       <PackageReference Include="Serilog" Version="4.0.1" />
       <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
       <PackageReference Include="Serilog.Sinks.Seq" Version="8.0.0" />
@@ -21,6 +22,12 @@
 
     <ItemGroup>
       <ProjectReference Include="..\EPAS.Core\EPAS.Core.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Update="appsettings.json">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
