--- a/FFF_Elis/TestWASConnection/appsettings.json
+++ b/FFF_Elis/TestWASConnection/appsettings.json
@@ -10,7 +10,13 @@
         "ClearString": true,
         "UseXml": false
     },
+    "WAS": {
+        "Protocol": "nettcp",
+        "URL": "127.0.0.1",
+        "Port": 4321
+    },
     "API": {
+        "APILogging": false,
         "URL": "http://localhost:44306",
         "Key": "a6340a1376a47bb98251fa233777501a"
     }
