--- a/FFF_Elis/EPAS.BusinessLogic/EPAS.BusinessLogic.csproj
+++ b/FFF_Elis/EPAS.BusinessLogic/EPAS.BusinessLogic.csproj
@@ -15,4 +15,10 @@
       <ProjectReference Include="..\EPAS.Core\EPAS.Core.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Serilog" Version="4.0.1" />
+      <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
+      <PackageReference Include="Serilog.Sinks.Seq" Version="8.0.0" />
+    </ItemGroup>
+
 </Project>
