Added Design From other Project

--- a/FFF_Elis/TestWASConnection/appsettings.json
+++ b/FFF_Elis/TestWASConnection/appsettings.json
@@ -16,6 +16,7 @@
         "Port": 4321
     },
     "API": {
+        "FirebrigadeName": "Freiling",
         "APILogging": false,
         "URL": "http://localhost:44306",
         "Key": "a6340a1376a47bb98251fa233777501a"
