--- a/FFF_Elis/EPAS.BusinessLogic/EPAS.BusinessLogic.csproj
+++ b/FFF_Elis/EPAS.BusinessLogic/EPAS.BusinessLogic.csproj
@@ -16,6 +16,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.SignalR.Client.Core" Version="8.0.10" />
       <PackageReference Include="Serilog" Version="4.0.1" />
       <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
       <PackageReference Include="Serilog.Sinks.Seq" Version="8.0.0" />
