Added Communication between WAS and Service

--- a/FFF_Elis/TestWASConnection/appsettings.json
+++ b/FFF_Elis/TestWASConnection/appsettings.json
@@ -7,8 +7,8 @@
         }
     },
     "Testing": {
-        "ClearString": true,
-        "UseXml": false
+        "ClearString": false,
+        "UseXml": true
     },
     "WAS": {
         "Protocol": "nettcp",
@@ -17,8 +17,8 @@
     },
     "API": {
         "FirebrigadeName": "Freiling",
-        "APILogging": false,
-        "URL": "http://localhost:44306",
-        "Key": "a6340a1376a47bb98251fa233777501a"
+        "APILogging": true,
+        "URL": "https://localhost:44306",
+        "Key": "c56d77d680cc73cb9162fa2ac922cce1"
     }
 }
