Added Dynamic Firestation Coordinates

--- a/FFF_Elis/TestWASConnection/appsettings.json
+++ b/FFF_Elis/TestWASConnection/appsettings.json
@@ -16,7 +16,7 @@
         "Port": 4321
     },
     "API": {
-        "FirebrigadeName": "Freiling",
+        "FirebrigadeName": "FREILING",
         "APILogging": true,
         "URL": "https://localhost:44306",
         "Key": "c56d77d680cc73cb9162fa2ac922cce1"
