--- a/FFF_Elis/EPAS.App/epas_app/pubspec.yaml
+++ b/FFF_Elis/EPAS.App/epas_app/pubspec.yaml
@@ -75,17 +75,19 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  fonts:
+    - family: mirador-medium
+      fonts:
+        - asset: fonts/Fronius-Symbols.ttf
+    - family: mirador
+      fonts:        
+        - asset: fonts/mirador-medium.ttf
+    - family: rationaldisplay
+      fonts:
+        - asset: fonts/rationaldisplay-book.ttf
+        - asset: fonts/rationaldisplay-italic.ttf
+        - style: italic
+        - asset: fonts/rationaldisplay-semibold.ttf
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
