--- a/FFF_Elis/EPAS.App/epas_app/pubspec.yaml
+++ b/FFF_Elis/EPAS.App/epas_app/pubspec.yaml
@@ -37,6 +37,11 @@ dependencies:
   cupertino_icons: ^1.0.2
   http: ^1.1.0
   intl: ^0.19.0
+  flutter_map: ^6.1.0
+  latlong2: ^0.9.1
+  geocoding: ^3.0.0
+  url_launcher: ^6.2.4
+  maps_launcher: ^2.2.1
 
 dev_dependencies:
   flutter_test:
