--- a/FFF_Elis/EPAS/EPAS.csproj
+++ b/FFF_Elis/EPAS/EPAS.csproj
@@ -10,6 +10,7 @@
     <ItemGroup>
         <PackageReference Include="Blazored.LocalStorage" Version="4.5.0" />
         <PackageReference Include="Google.Apis.Calendar.v3" Version="1.68.0.3557" />
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.11" />
         <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="8.0.8"/>
         <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.8"/>
         <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="8.0.11" />
@@ -22,6 +23,7 @@
         <PackageReference Include="MudBlazor" Version="7.9.0" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
         <PackageReference Include="Nominatim.API" Version="2.0.0" />
+        <PackageReference Include="Scalar.AspNetCore" Version="1.2.46" />
         <PackageReference Include="Serilog" Version="4.0.1" />
         <PackageReference Include="Serilog.Extensions.Logging" Version="8.0.0" />
         <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
