--- a/FFF_Elis/EPAS.App/epas_app/pubspec.yaml
+++ b/FFF_Elis/EPAS.App/epas_app/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   url_launcher: ^6.2.4
   maps_launcher: ^2.2.1
   shared_preferences: ^2.2.3
+  http_interceptor: ^2.0.0-beta.8
+  flutter_secure_storage: ^9.2.2
 
 dev_dependencies:
   flutter_test:
